--- a/src/Card.css
+++ b/src/Card.css
@@ -60,6 +60,7 @@ article button {
     font-size: 16px;
     font-weight: 700;
     text-align: center;
+    cursor: pointer;
 }
 
 article button:first-of-type {
